--- a/GameCheatToolTemplates.csproj
+++ b/GameCheatToolTemplates.csproj
@@ -179,13 +179,11 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\imgdemo.jpg" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\imgdemo.bmp" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="FodyWeavers.xml" />
+    <None Include="Resources\Ethereum.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
